first draft of about me

--- a/index.html
+++ b/index.html
@@ -8,22 +8,32 @@
   <body>
     <h1>Prithvi Kinariwala</h1>   
 
-    <!-- <ul class="nav">
-      <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Service</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Team</a></li>
-    </ul> -->
+    <ul class="topnav"><b>
+      <li><a class="active" href="#interests">Interests</a></li>
+      <li><a href="#work_experience">Work Experience</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#connect">Connecting with Me</a></li>
+    </b></ul>
 
+    <div class="row">
+      <div class="column">
+        <p>I'm Prithvi Kinariwala, a Second Year studying Computer Science at the University of Virginia. I am pursuing a B.S. in Computer Science with a minor in Data Science. I'm passionate not only about software development, but also cybersecurity, data science, deep learning, and technology's implications on society.</p>
 
+        <p>You'll find everything about me on this website, as well as links to all my social networks.</p>
+      </div>
 
-    <p>Welcome to my website! You'll find everything about me on this website, as well as links to all my social networks. </p>
-    
-    <h2>Interests</h2>
-    <h2>Work Experience</h2>
-    <h2>Projects</h2>
-    <h2>Connecting with Me</h2>
+      <div class="column">
+        <img src="images/greatwall.jpg" alt="Me climbing the Great Wall of China" style="width:700px;height:450px">
+      </div>
+      
+    </div>
 
-    <!-- <script src="scripts/main.js"></script> -->
+    <h2 id = "interests">Interests</h2>
+    <h2 id = "work_experience">Work Experience</h2>
+    <h2 id = "projects">Projects</h2>
+    <h2 id = "connect">Connecting with Me</h2>
+
   </body>
 </html>
+
+<!-- https://visme.co/blog/website-color-schemes/ -->
