completed first page draft

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <title>Prithvi Kinariwala</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <h1>Prithvi Kinariwala</h1>   
 
@@ -29,11 +33,38 @@
     </div>
 
     <h2 id = "interests">Interests</h2>
-    <h2 id = "work_experience">Work Experience</h2>
-    <h2 id = "projects">Projects</h2>
-    <h2 id = "connect">Connecting with Me</h2>
 
+      <p>I'm fascinated with almost anything that runs on 1s and 0s. Although I have applied my skills in Software Development at my internship at ST Engineering iDirect, I've explored the world outside of Git pulls, pushes, and pull requests. </p>
+
+      <p>My second obsession is with Data Science; from how it’s collected to how it’s analyzed. I’ve taken many statistics courses to fuel my interest. I’ve used R for statistical tests and simulations, as well as used our best friends ggplot and plotly to create stunning visualizations. I’ve also used SAS for Linear Regression Modeling. </p>
+
+      <p>My second obsession is with Data Science; from how it’s collected to how it’s analyzed. I’ve taken many statistics courses to fuel my interest. I’ve used R for statistical tests and simulations, as well as to create stunning visualizations. I’ve also used SAS for Linear Regression Modeling to build interesting models.</p>
+
+      <p>Apart from technical work, I am a part of the UVA International Relations Organization. I am part of the leadership that plans UVA’s high school Model United Nations conference, VAMUN, for students across the easter seaboard. On top, I’m on the editorial board for The Spectra: The Virginia Engineering and Science Research Journal. Although computer nerds aren’t always seen to give public speeches or join editorial boards, I find these skills important for anyone.</p> 
+
+      <p>And finally, if you haven’t noticed by the image, I love travelling. Before the COVID-19 pandemic, I had travelled to 38 countries. If none of my technical qualifications are interesting, please consider reaching out just to talk about travel. </p>
+
+    <h2 id = "work_experience">Work Experience</h2>
+      <p>This is a website, not a resume. My work experience is as unique as I am. </p>
+
+      <p>For two summers in high school, I interned alongside Transmission and Distribution Planning Engineers at Potomac Power Electric Company (Pepco). Although a far cry from Software Development, the experience fueled my interest in Electrical and Computer Engineering.</p>
+
+      <p>Now in College, I work with Software Development teams at ST Engineering iDirect in the satellite communications industry. I like to think that I have learned more on the job than a few of my classes in college :/</p>
+
+      <p>For those more interested, specifics of my work can be found on my linked resume. </p>
+    
+    <h2 id = "projects">Projects</h2>
+      <p>My favorite project has been Video Games with R. It’s a report-style project where I harnessed R to create powerful data visualizations and statistical tests on a data set of video games from 1980 to 2016. I’ve been a gamer my whole life, but this project gave me an appreciation of not just the games I played, but also the industry as a whole.</p>
+
+
+    <h2 id = "connect">Connecting with Me</h2>
+      <p>Contact me for my updated Resume!</p>
+      <!-- <iframe src="Prithvi_Kinariwala_Resume.pdf" width = 100% height=400px></iframe> -->
+
+      <div class="row">
+        <div class="column"><a href="https://github.com/prithvikin" target=”_blank”><img class= "icon" src="images/icon-github.png" alt="Github Logo"></a></div>
+        <div class="column"><a href="https://www.linkedin.com/in/pkinariwala/" target=”_blank”><img class= "icon" src="images/icon-linkedin.png" alt="LinkedIn Logo"></a></div>
+        <div class="column"><a href="mailto:prk8cr@virginia.edu" target=”_blank”><img class= "icon" src="images/icon-gmail.png" alt="Gmail Logo"></a></div>
+      </div>
   </body>
 </html>
-
-<!-- https://visme.co/blog/website-color-schemes/ -->
