--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <p>My second obsession is with Data Science; from how it’s collected to how it’s analyzed. I’ve taken many statistics courses to fuel my interest. I’ve used R for statistical tests and simulations, as well as to create stunning visualizations. I’ve also used SAS for Linear Regression Modeling to build interesting models.</p>
 
-        <p>Apart from technical work, I am a part of the UVA International Relations Organization. I am part of the leadership that plans UVA’s high school Model United Nations conference, VAMUN, for students across the easter seaboard. On top, I’m on the editorial board for The Spectra: The Virginia Engineering and Science Research Journal. Although computer nerds aren’t always seen to give public speeches or join editorial boards, I find these skills important for anyone.</p> 
+        <p>Apart from technical work, I am a part of the UVA International Relations Organization. I am part of the leadership that plans UVA’s high school Model United Nations conference, VAMUN, for students across the eastern seaboard. On top, I’m on the editorial board for The Spectra: The Virginia Engineering and Science Research Journal. Although computer nerds aren’t always seen to give public speeches or join editorial boards, I find these skills important for anyone.</p> 
 
         <p>And finally, if you haven’t noticed by the image, I love travelling. Before the COVID-19 pandemic, I had travelled to 38 countries. If none of my technical qualifications are interesting, please consider reaching out just to talk about travel. </p>
 
