fixed typos, updated readme

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
 
         <p>My second obsession is with Data Science; from how it’s collected to how it’s analyzed. I’ve taken many statistics courses to fuel my interest. I’ve used R for statistical tests and simulations, as well as to create stunning visualizations. I’ve also used SAS for Linear Regression Modeling to build interesting models.</p>
 
-        <p>Apart from technical work, I am a part of the UVA International Relations Organization. I am part of the leadership that plans UVA’s high school Model United Nations conference, VAMUN, for students across the eastern seaboard. On top, I’m on the editorial board for The Spectra: The Virginia Engineering and Science Research Journal. Although computer nerds aren’t always seen to give public speeches or join editorial boards, I find these skills important for anyone.</p> 
+        <p>Apart from technical work, I'm a part of the UVA International Relations Organization. I'm on the leadership (formally known as Secretariat) that plans UVA’s high school Model United Nations conference, VAMUN, for students across the eastern seaboard. On top, I’m on the editorial board for The Spectra: The Virginia Engineering and Science Research Journal. Although computer nerds aren’t always seen to give public speeches or join editorial boards, I find these skills important for anyone.</p> 
 
-        <p>And finally, if you haven’t noticed by the image, I love travelling. Before the COVID-19 pandemic, I had travelled to 38 countries. If none of my technical qualifications are interesting, please consider reaching out just to talk about travel. </p>
+        <p>And finally, if you haven’t noticed by the image, I love traveling. Before the COVID-19 pandemic, I had travelled to 38 countries. If none of my technical qualifications are interesting, please consider reaching out just to talk about traveling!</p>
 
       <h2 id = "work_experience">Work Experience</h2>
         <p>This is a website, not a resume. My work experience is as unique as I am. </p>
 
         <p>For two summers in high school, I interned alongside Transmission and Distribution Planning Engineers at Potomac Power Electric Company (Pepco). Although a far cry from Software Development, the experience fueled my interest in Electrical and Computer Engineering.</p>
 
-        <p>Now in College, I work with Software Development teams at ST Engineering iDirect in the satellite communications industry. I like to think that I have learned more on the job than a few of my classes in college :/</p>
+        <p>Now in College, I work with Software Development teams at ST Engineering iDirect in the satellite communications industry. I like to think that I have learned more on the job than a few of my classes in college ;)</p>
 
         <p>For those more interested, specifics of my work can be found on my linked resume. </p>
       
       <h2 id = "projects">Projects</h2>
-        <p>My favorite project has been Video Games with R. It’s a report-style project where I harnessed R to create powerful data visualizations and statistical tests on a data set of video games from 1980 to 2016. I’ve been a gamer my whole life, but this project gave me an appreciation of not just the games I played, but also the industry as a whole.</p>
+        <p>My favorite project has been <a href="https://github.com/prithvikin/video-games-with-R" target="_blank">Video Games with R</a>. It’s a report-style project where I harnessed R to create powerful data visualizations and statistical tests on a data set of video games from 1980 to 2016. I’ve been a gamer my whole life, but this project gave me an appreciation of not just the games I played, but also the industry as a whole.</p>
 
 
       <h2 id = "connect">Connecting with Me</h2>
