--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </b></ul>
 
     <div class = "bodyText">
-      <p>I'm Prithvi Kinariwala, a Second Year studying Computer Science at the University of Virginia. I am pursuing a B.S. in Computer Science with a minor in Data Science. I'm passionate not only about software development, but also cybersecurity, data science, deep learning, and technology's implications on society.</p>
+      <p>I'm Prithvi Kinariwala, a Third Year studying Computer Science at the University of Virginia. I am pursuing a B.S. in Computer Science with a minor in Data Science. I'm passionate not only about software development, but also cybersecurity, data science, deep learning, and technology's implications on society.</p>
 
       <img src="images/greatwall.jpg" alt="Me climbing the Great Wall of China" class="center">
       <br>
@@ -50,10 +50,10 @@
         <p>Contact me for my updated Resume!</p>
     </div>
 
-      <div class="row">
-        <div class="column"><a href="https://github.com/prithvikin" target=”_blank”><img class= "icon" src="images/icon-github.png" alt="Github Logo"></a></div>
-        <div class="column"><a href="https://www.linkedin.com/in/pkinariwala/" target=”_blank”><img class= "icon" src="images/icon-linkedin.png" alt="LinkedIn Logo"></a></div>
-        <div class="column"><a href="mailto:prk8cr@virginia.edu" target=”_blank”><img class= "icon" src="images/icon-gmail.png" alt="Gmail Logo"></a></div>
+      <div class="thumb_row">
+        <div class="thumb_column"><a href="https://github.com/prithvikin" target=”_blank”><img class= "icon" src="images/icon-github.png" alt="Github Logo"></a></div>
+        <div class="thumb_column"><a href="https://www.linkedin.com/in/pkinariwala/" target=”_blank”><img class= "icon" src="images/icon-linkedin.png" alt="LinkedIn Logo"></a></div>
+        <div class="thumb_column"><a href="mailto:prk8cr@virginia.edu" target=”_blank”><img class= "icon" src="images/icon-gmail.png" alt="Gmail Logo"></a></div>
       </div>
   </body>
 </html>
