updated with graduation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </b></ul>
 
     <div class = "bodyText">
-      <p>I'm Prithvi Kinariwala, a Third Year studying Computer Science at the University of Virginia. I am pursuing a B.S. in Computer Science with a minor in Data Science. I'm passionate not only about software development, but also cybersecurity, data science, deep learning, and technology's implications on society.</p>
+      <p>I'm Prithvi Kinariwala, a B.S. Computer Science graduate from the University of Virginia's Class of 2022. I'm passionate not only about software development, but also cybersecurity, data science, deep learning, and technology's implications on society.</p>
 
       <img src="images/greatwall.jpg" alt="Me climbing the Great Wall of China" class="center">
       <br>
