--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </b></ul>
 
     <div class = "bodyText">
-      <p>I'm Prithvi Kinariwala, a B.S. Computer Science graduate from the University of Virginia's Class of 2022. I'm passionate not only about software development, but also cybersecurity, data science, deep learning, and technology's implications on society.</p>
+      <p>I'm a Software Engineer in the Commercial and Investment Bank (CIB) at JP Morgan Chase & Co. I received my Master of Computer Science in Computer Science at Georgia Tech and Bachelor of Science in Computer science from UVA. I'm passionate not only about software development, but also artificial intelligence, cybersecurity, data science, and technology's implications on society.</p>
 
       <img src="images/greatwall.jpg" alt="Me climbing the Great Wall of China" class="center">
       <br>
