--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <p>During my internship with JPMorgan Private Bank, I developed and deployed a Siamese Convolutional Neural Network (CNN) model capable of distinguishing between real and forged signatures. The model achieved an impressive 94.7% accuracy and 93.3% recall on both public and private datasets. This work demonstrates my expertise in deep learning, model training, and deployment for practical applications.</p>
       
       <h2 id = "projects">Projects</h2>
+
+        <p>A recent project as been <a href="https://fitblog.vercel.app/" target="_blank">FitBlog</a>. Fitblog is a gamified fitness social network I developed as a personal project using TypeScript and React. The platform allows users to log in via GitHub, track their fitness activities, and engage with a global leaderboard. Built with Supabase for backend management, Fitblog provides a seamless user experience while promoting fitness community interaction and motivation.<p>
+          
         <p>My favorite project has been <a href="https://github.com/prithvikin/video-games-with-R" target="_blank">Video Games with R</a>. It’s a report-style project where I harnessed R to create powerful data visualizations and statistical tests on a data set of video games from 1980 to 2016. I’ve been a gamer my whole life, but this project gave me an appreciation of not just the games I played, but also the industry as a whole.</p>
 
     </div>
